<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:text="@string/start_garbage_clean"
            android:layout_marginLeft="16dp"
            android:padding="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/main_start_garbage_clean"
            android:layout_height="wrap_content"/>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/main_progress_bar"
            app:strokeColor="@color/colorAccent"
            app:cardCornerRadius="8dp"
            android:visibility="gone"
            app:strokeWidth="1dp"
            android:layout_height="wrap_content">
        <ProgressBar
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:layout_height="wrap_content"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardCornerRadius="8dp"
            app:strokeColor="@color/colorAccent"
            app:strokeWidth="1dp"
            android:visibility="gone"
            android:id="@+id/main_internet_error_card_view"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    style="@style/BaseTextStyle"
                    android:textSize="19sp"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/error_occurred_while_loading_data_please_check_internet_connection"
                    android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:text="@string/repeat"
                    android:padding="4dp"
                    android:id="@+id/main_data_load_repeat"
                    android:textColor="@color/colorAccent"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/colorAccent"
                    app:backgroundTint="@color/colorWhite"
                    app:rippleColor="@android:color/transparent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical">


        <TextView
                android:id="@+id/main_title"
                style="@style/BaseTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="12dp"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_data_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:id="@+id/main_you_dont_have_garbage"
            android:padding="16dp"
            style="@style/BaseTextStyle"
            android:visibility="gone"
            android:layout_gravity="center"
            android:text="@string/congratulations_you_don_t_have_garbage_in_your_videos"
            android:layout_height="wrap_content"/>

    <View
            android:layout_width="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/drawable_alpha_gradient"
            android:layout_height="60dp"/>
</FrameLayout>